Add newly generated routes and swagger JSON
